--- a/index.html
+++ b/index.html
@@ -464,8 +464,7 @@ INSTRUCCIONES RÁPIDAS:
 /* =========================
    CONFIG (CAMBIA ESTO)
    ========================= */
-const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyjjKTQe-NSBv9BXB9KwkBGzct4pp4lYYM2OnCEMS6Gq6NDN4saHkA55D7SiFDcEUvH/exec
-";
+const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyjjKTQe-NSBv9BXB9KwkBGzct4pp4lYYM2OnCEMS6Gq6NDN4saHkA55D7SiFDcEUvH/exec";
 const SHARED_SECRET = "demo123";
 
 /* =========================
