--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@ async function submitReservation() {
   btn.textContent = "Enviando…";
 
   try {
-    const res = await fetch(BACKEND_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
+const res = await fetch(BACKEND_URL, {
+  method: "POST",
+  headers: { "Content-Type": "text/plain;charset=utf-8" },
+  body: JSON.stringify(payload)
+});
 
     const data = await res.json();
 
