--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ INSTRUCCIONES RÁPIDAS:
 /* =========================
    CONFIG (CAMBIA ESTO)
    ========================= */
-const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyf4yl3Za8AusgQp3KHOhf_vGB0IIgGjKDkmBs0Z_lGHmHioExFlL6XHZLAWAiKSdT5/exec;
+const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyf4yl3Za8AusgQp3KHOhf_vGB0IIgGjKDkmBs0Z_lGHmHioExFlL6XHZLAWAiKSdT5/exec";
 const SHARED_SECRET = "demo123";
 
 /* =========================
