--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ const HORAS = [
 
 const MENU = {
   aperitivos:["Arancini","Montaditos de Guiso"],
-  principales:["Mac and Cheese","Tenders","Pasta Vegana","Risotto de Calabaza","Rigatoni Salsa Setas"],
+  principales:["Pasta Vegana","Risotto de Calabaza","Rigatoni Salsa Setas"],
   postres:["Dulce de Papaya","Flan Tiramisu"],
   ninos:["Tenders","Mac and Cheese"]
 };
