--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <script>
+  window.onerror = function(message, source, lineno, colno, error) {
+  alert("ERROR: " + message + " | Línea: " + lineno);
+};
 /* ================= CONFIG ================= */
 const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyOde3SksOR_CMmSDNrA7F-5ptCO78M7yr7dxG5Usty8E0hu6kE93PbSuTao0OeXsx-/exec";
 const SHARED_SECRET = "demo123";
